Test de recibimiento de datos de checkbox

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -579,6 +579,17 @@
           "imported": false,
           "parents": [],
           "type": "css"
+        },
+        "fe872d87": {
+          "id": "fe872d87",
+          "path": "process.php",
+          "output": "process.php",
+          "name": "process.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
         }
       },
       "deploymentHistory": {},
