Se mejoró la apariencia del checkbox y el desleccionar los checkbox

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -186,7 +186,7 @@
           "output": "css/style.css",
           "name": "style.css",
           "category": "CSS",
-          "autoCompile": true,
+          "autoCompile": false,
           "sourceMaps": false,
           "compress": true,
           "cssnext": false,
@@ -590,6 +590,39 @@
           "imported": false,
           "parents": [],
           "type": "php"
+        },
+        "129ffa00": {
+          "id": "129ffa00",
+          "path": "mag-form.php",
+          "output": "mag-form.php",
+          "name": "mag-form.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "1bd4eb26": {
+          "id": "1bd4eb26",
+          "path": "prospecto.php",
+          "output": "prospecto.php",
+          "name": "prospecto.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "b8f3bc1b": {
+          "id": "b8f3bc1b",
+          "path": "index.php",
+          "output": "index.php",
+          "name": "index.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
         }
       },
       "deploymentHistory": {},
@@ -597,8 +630,8 @@
         "watch": "",
         "liveRefresh": true,
         "useCustomServer": true,
-        "port": 0,
-        "useCustomPort": false,
+        "port": 8013,
+        "useCustomPort": true,
         "customServerUrl": "http://localhost/hunabix/proyectos/musinetwork-cs-views/",
         "watchedFileExtensions": "less, sass, scss, styl, md, markdown, coffee, js, jade, haml, slim, ls, html,htm, css, rb, php, asp, aspx, cfm, chm, cms, do, erb, jsp, mhtml, mspx, pl, py, shtml, cshtml, cs,vb, vbs, tpl, ctp, kit, png, jpg, jpeg",
         "excludePatterns": "Prepros Build, node_modules, .git, .idea, .sass-cache, .hg, .svn, .cache, config.rb, prepros.cfg, .DS_Store, bower_components",
