Reacomodé las carpetas para los JS

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -30,131 +30,11 @@
           ],
           "type": "sass"
         },
-        "fe2cfe0b": {
-          "id": "fe2cfe0b",
-          "path": "js/bootstrap.js",
-          "output": "js/bootstrap-dist.js",
-          "name": "bootstrap.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "ec23ca7c": {
-          "id": "ec23ca7c",
-          "path": "js/get-shit-done.js",
-          "output": "js/get-shit-done-dist.js",
-          "name": "get-shit-done.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "4716939e": {
-          "id": "4716939e",
-          "path": "js/gsdk-bootstrapswitch.js",
-          "output": "js/gsdk-bootstrapswitch-dist.js",
-          "name": "gsdk-bootstrapswitch.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "8686eccd": {
-          "id": "8686eccd",
-          "path": "js/gsdk-checkbox.js",
-          "output": "js/gsdk-checkbox-dist.js",
-          "name": "gsdk-checkbox.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "b72e9830": {
-          "id": "b72e9830",
-          "path": "js/gsdk-radio.js",
-          "output": "js/gsdk-radio-dist.js",
+        "51073437": {
+          "id": "51073437",
+          "path": "js/support/gsdk/gsdk-radio.js",
+          "output": "js/support/gsdk/gsdk-radio-dist.js",
           "name": "gsdk-radio.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "cf79f8ab": {
-          "id": "cf79f8ab",
-          "path": "js/custom.js",
-          "output": "js/custom-dist.js",
-          "name": "custom.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "c9454bb4": {
-          "id": "c9454bb4",
-          "path": "js/jquery-1.10.2.js",
-          "output": "js/jquery-1.10.2-dist.js",
-          "name": "jquery-1.10.2.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "63f0955f": {
-          "id": "63f0955f",
-          "path": "js/jquery-ui-1.10.4.custom.min.js",
-          "output": "js/jquery-ui-1.10.4.custom.min-dist.js",
-          "name": "jquery-ui-1.10.4.custom.min.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "547e2816": {
-          "id": "547e2816",
-          "path": "js/jquery-ui.custom.min.js",
-          "output": "js/jquery-ui.custom.min-dist.js",
-          "name": "jquery-ui.custom.min.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
@@ -186,7 +66,7 @@
           "output": "css/style.css",
           "name": "style.css",
           "category": "CSS",
-          "autoCompile": false,
+          "autoCompile": true,
           "sourceMaps": false,
           "compress": true,
           "cssnext": false,
@@ -623,6 +503,157 @@
           "imported": false,
           "parents": [],
           "type": "php"
+        },
+        "b66eb564": {
+          "id": "b66eb564",
+          "path": "js/support/datepicker/moment.js",
+          "output": "js/support/datepicker/moment-dist.js",
+          "name": "moment.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "d9ba7023": {
+          "id": "d9ba7023",
+          "path": "js/support/datepicker/knockout-2.3.0.js",
+          "output": "js/support/datepicker/knockout-2.3.0-dist.js",
+          "name": "knockout-2.3.0.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "f95b2475": {
+          "id": "f95b2475",
+          "path": "js/support/datepicker/moment-datepicker.js",
+          "output": "js/support/datepicker/moment-datepicker-dist.js",
+          "name": "moment-datepicker.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "e0edf7f2": {
+          "id": "e0edf7f2",
+          "path": "js/support/datepicker/moment-datepicker-ko.js",
+          "output": "js/support/datepicker/moment-datepicker-ko-dist.js",
+          "name": "moment-datepicker-ko.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "c2c17fc5": {
+          "id": "c2c17fc5",
+          "path": "css/datepicker.css",
+          "output": "css/datepicker-dist.css",
+          "name": "datepicker.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "ebf3c6cd": {
+          "id": "ebf3c6cd",
+          "path": "js/support/jquery-2.1.4.min.js",
+          "output": "js/support/jquery-2.1.4.min-dist.js",
+          "name": "jquery-2.1.4.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "53a3ef9c": {
+          "id": "53a3ef9c",
+          "path": "js/support/bootstrap.js",
+          "output": "js/support/bootstrap-dist.js",
+          "name": "bootstrap.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "6c75a6a1": {
+          "id": "6c75a6a1",
+          "path": "js/support/gsdk/gsdk-checkbox.js",
+          "output": "js/support/gsdk/gsdk-checkbox-dist.js",
+          "name": "gsdk-checkbox.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "e444af73": {
+          "id": "e444af73",
+          "path": "js/support/gsdk/gsdk-bootstrapswitch.js",
+          "output": "js/support/gsdk/gsdk-bootstrapswitch-dist.js",
+          "name": "gsdk-bootstrapswitch.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "19ec2a48": {
+          "id": "19ec2a48",
+          "path": "js/support/gsdk/get-shit-done.js",
+          "output": "js/support/gsdk/get-shit-done-dist.js",
+          "name": "get-shit-done.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
@@ -630,8 +661,8 @@
         "watch": "",
         "liveRefresh": true,
         "useCustomServer": true,
-        "port": 8013,
-        "useCustomPort": true,
+        "port": 0,
+        "useCustomPort": false,
         "customServerUrl": "http://localhost/hunabix/proyectos/musinetwork-cs-views/",
         "watchedFileExtensions": "less, sass, scss, styl, md, markdown, coffee, js, jade, haml, slim, ls, html,htm, css, rb, php, asp, aspx, cfm, chm, cms, do, erb, jsp, mhtml, mspx, pl, py, shtml, cshtml, cs,vb, vbs, tpl, ctp, kit, png, jpg, jpeg",
         "excludePatterns": "Prepros Build, node_modules, .git, .idea, .sass-cache, .hg, .svn, .cache, config.rb, prepros.cfg, .DS_Store, bower_components",
