Checkboxes listos multiselección y apariencia listo

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1724,6 +1724,21 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "db3443db": {
+          "id": "db3443db",
+          "path": "js/support/jquery.tshift.min.js",
+          "output": "js/support/jquery.tshift.min-dist.js",
+          "name": "jquery.tshift.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
@@ -1911,23 +1926,6 @@
             "output": {
               "quote_keys": false,
               "space_colon": true,
-              "ascii_only": false,
-              "unescape_regexps": false,
-              "inline_script": false,
-              "beautify": false,
-              "bracketize": false,
-              "semicolons": true,
-              "comments": false,
-              "preserve_line": false,
-              "screw_ie8": false,
-              "preamble": null
-            }
-          }
-        }
-      }
-    }
-  }
-]       "space_colon": true,
               "ascii_only": false,
               "unescape_regexps": false,
               "inline_script": false,
