Agregué un modal independiente que se activa en el boton de nota de cualquier proespecto

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -62,6 +62,21 @@
           ],
           "type": "sass"
         },
+        "51073437": {
+          "id": "51073437",
+          "path": "js/support/gsdk/gsdk-radio.js",
+          "output": "js/support/gsdk/gsdk-radio-dist.js",
+          "name": "gsdk-radio.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
         "50ef0fa9": {
           "id": "50ef0fa9",
           "path": "js/main.js",
@@ -272,6 +287,82 @@
           ],
           "type": "sass"
         },
+        "dfb69a1e": {
+          "id": "dfb69a1e",
+          "path": "css/sass/support/gsdk/_get-shit-done.scss",
+          "output": "css/css/support/gsdk/_get-shit-done.css",
+          "name": "_get-shit-done.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "ac40fe75": {
+          "id": "ac40fe75",
+          "path": "css/sass/support/gsdk/_gsdk-base.scss",
+          "output": "css/css/support/gsdk/_gsdk-base.css",
+          "name": "_gsdk-base.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "f097c218": {
+          "id": "f097c218",
+          "path": "css/sass/support/gsdk/_gsdk-checkbox-radio-switch.scss",
+          "output": "css/css/support/gsdk/_gsdk-checkbox-radio-switch.css",
+          "name": "_gsdk-checkbox-radio-switch.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "b27f07f1": {
+          "id": "b27f07f1",
+          "path": "css/sass/support/gsdk/_gsdk-sliders.scss",
+          "output": "css/css/support/gsdk/_gsdk-sliders.css",
+          "name": "_gsdk-sliders.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
         "e9828eb6": {
           "id": "e9828eb6",
           "path": "header.php",
@@ -411,6 +502,51 @@
           "path": "js/support/bootstrap.js",
           "output": "js/support/bootstrap-dist.js",
           "name": "bootstrap.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "6c75a6a1": {
+          "id": "6c75a6a1",
+          "path": "js/support/gsdk/gsdk-checkbox.js",
+          "output": "js/support/gsdk/gsdk-checkbox-dist.js",
+          "name": "gsdk-checkbox.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "e444af73": {
+          "id": "e444af73",
+          "path": "js/support/gsdk/gsdk-bootstrapswitch.js",
+          "output": "js/support/gsdk/gsdk-bootstrapswitch-dist.js",
+          "name": "gsdk-bootstrapswitch.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "19ec2a48": {
+          "id": "19ec2a48",
+          "path": "js/support/gsdk/get-shit-done.js",
+          "output": "js/support/gsdk/get-shit-done-dist.js",
+          "name": "get-shit-done.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
@@ -1163,6 +1299,40 @@
           "parents": [],
           "type": "javascript"
         },
+        "76d6025c": {
+          "id": "76d6025c",
+          "path": "js/support/npm.js",
+          "output": "js/support/npm-dist.js",
+          "name": "npm.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "024dde54": {
+          "id": "024dde54",
+          "path": "css/sass/support/_bootstrap-theme.scss",
+          "output": "css/css/support/_bootstrap-theme.css",
+          "name": "_bootstrap-theme.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
         "a493dd72": {
           "id": "a493dd72",
           "path": "js/support/moment-with-locales.js",
@@ -1183,6 +1353,37 @@
           "path": "js/support/moment.js",
           "output": "js/support/moment-dist.js",
           "name": "moment.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "a2776098": {
+          "id": "a2776098",
+          "path": "assets/css/bootstrap-datepicker.css",
+          "output": "assets/css/bootstrap-datepicker-dist.css",
+          "name": "bootstrap-datepicker.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "391a4bed": {
+          "id": "391a4bed",
+          "path": "assets/js/bootstrap-datepicker.js",
+          "output": "assets/js/bootstrap-datepicker-dist.js",
+          "name": "bootstrap-datepicker.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
@@ -1534,6 +1735,92 @@
           "height": 29,
           "width": 80
         },
+        "5b1ee0e3": {
+          "id": "5b1ee0e3",
+          "path": "assets/css/demo.css",
+          "output": "assets/css/demo-dist.css",
+          "name": "demo.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "aeecfbb8": {
+          "id": "aeecfbb8",
+          "path": "assets/css/get-shit-done.css",
+          "output": "assets/css/get-shit-done-dist.css",
+          "name": "get-shit-done.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "b1909520": {
+          "id": "b1909520",
+          "path": "assets/css/gsdk-checkbox-radio-switch.css",
+          "output": "assets/css/gsdk-checkbox-radio-switch-dist.css",
+          "name": "gsdk-checkbox-radio-switch.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "aeecfbb8"
+          ],
+          "type": "css"
+        },
+        "4dc1d5ff": {
+          "id": "4dc1d5ff",
+          "path": "assets/css/gsdk-sliders.css",
+          "output": "assets/css/gsdk-sliders-dist.css",
+          "name": "gsdk-sliders.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "aeecfbb8"
+          ],
+          "type": "css"
+        },
+        "29ce8c4f": {
+          "id": "29ce8c4f",
+          "path": "assets/css/gsdk-base.css",
+          "output": "assets/css/gsdk-base-dist.css",
+          "name": "gsdk-base.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "aeecfbb8"
+          ],
+          "type": "css"
+        },
         "cf4c3386": {
           "id": "cf4c3386",
           "path": "assets/js/custom.js",
@@ -1689,56 +1976,16 @@
           "parents": [],
           "type": "javascript"
         },
-        "1c8949ba": {
-          "id": "1c8949ba",
-          "path": "css/sass/support/_bootstrap-datepicker.scss",
-          "output": "css/css/support/_bootstrap-datepicker.css",
-          "name": "_bootstrap-datepicker.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "nodeSassCompress": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "782ff4f4"
-          ],
-          "type": "sass"
-        },
-        "52fa243c": {
-          "id": "52fa243c",
-          "path": "js/support/bootstrap-datepicker.js",
-          "output": "js/support/bootstrap-datepicker-dist.js",
-          "name": "bootstrap-datepicker.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "sourceMaps": false,
+        "1a4edec5": {
+          "id": "1a4edec5",
+          "path": "modal.php",
+          "output": "modal.php",
+          "name": "modal.php",
+          "category": "JUST_WATCH",
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
-        },
-        "db3443db": {
-          "id": "db3443db",
-          "path": "js/support/jquery.tshift.min.js",
-          "output": "js/support/jquery.tshift.min-dist.js",
-          "name": "jquery.tshift.min.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
+          "type": "php"
         }
       },
       "deploymentHistory": {},
@@ -1942,4 +2189,4 @@
       }
     }
   }
-]]
+]
