Agregué el modal multi que obtiene los datos del lead en turno

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1986,6 +1986,39 @@
           "imported": false,
           "parents": [],
           "type": "php"
+        },
+        "e779ead9": {
+          "id": "e779ead9",
+          "path": "modal-interaccion.php",
+          "output": "modal-interaccion.php",
+          "name": "modal-interaccion.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "eb7294f5": {
+          "id": "eb7294f5",
+          "path": "modal-nota.php",
+          "output": "modal-nota.php",
+          "name": "modal-nota.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "a554d9e0": {
+          "id": "a554d9e0",
+          "path": "modal-multi.php",
+          "output": "modal-multi.php",
+          "name": "modal-multi.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
         }
       },
       "deploymentHistory": {},
